Product service implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,14 @@ spring.application.name=product-service
 
 server.port=8082
 
-spring.data.mongodb.uri=mongodb://localhost:27017/ecommerce
-spring.data.mongodb.database=ecommerce
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+spring.datasource.username=postgres
+spring.datasource.password=password
 
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.kafka.bootstrap-servers=ecommerce-kafka-1:9092
 spring.kafka.consumer.group-id=ecommerce-group
